Added GitHub link, and did some more CSS Styling

--- a/index.html
+++ b/index.html
@@ -71,7 +71,15 @@
           </div>
         </div>
       </div>
+      <p class="githubLink">
+        <a
+          href="https://github.com/StefanieLynn9008/my-weather-app-project"
+          target="_blank"
+          >Open-source code</a
+        >, by Stefanie Mehanovic
+      </p>
     </div>
+
     <script src="weatherapp2js.js"></script>
   </body>
 </html>
